--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,9 @@
     "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
+    "@truffle/contract": "^4.2.21",
+    "css-loader": "^4.3.0",
+    "style-loader": "^1.2.1",
     "web3": "^1.2.4"
   }
 }
