--- a/app/react-app/package.json
+++ b/app/react-app/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@truffle/contract": "^4.2.28",
     "react": "^17.0.1",
+    "react-bulma-components": "^3.4.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4",
