--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,10 +20,21 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Build smart contracts
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+      working-directory: .
+      run: |
+        npm ci
+        npm run build --if-present
+        npm test
+    - name: Build app
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+      working-directory: ./app/react-app
+      run: |
+        npm ci
+        npm run build --if-present
+        CI=TRUE npm test
