--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,17 +24,17 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-      working-directory: .
-      run: |
+    - run: |
         npm ci
         npm run build --if-present
         npm test
+      working-directory: .
     - name: Build app
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-      working-directory: ./app/react-app
-      run: |
+    - run: |
         npm ci
         npm run build --if-present
         CI=TRUE npm test
+      working-directory: ./app/react-app
