--- a/app/react-app/package.json
+++ b/app/react-app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@truffle/contract": "^4.2.28",
+    "immer": "^8.0.1",
     "normalize-url": "^5.3.0",
     "react": "^17.0.1",
     "react-bulma-components": "^3.4.0",
